--- a/app/views/timesheet/report.html.erb
+++ b/app/views/timesheet/report.html.erb
@@ -12,7 +12,7 @@
 <%= form_tag({}, { :id => 'time_entries'}) do -%>
   <% if @timesheet.time_entries.length > 0 %>
     <h2><%= l(:label_spent_time) %> (<%= h(number_with_precision(@grand_total, :precision => @precision)) -%> <%= h(l(:field_hours)) -%>)</h2>
-    <% @timesheet.time_entries.each do |entryname,entry|
+    <% @timesheet.time_entries.sort.to_h.each do |entryname,entry|
       case @timesheet.sort
         when :user %>
         <h3><%= h entryname -%> (<%= h number_with_precision(@total[entryname], :precision => @precision) %> <%= h(l(:field_hours)) -%>)</h3>
